admin-index alignment fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -381,6 +381,9 @@ a {
   .application-mail {
     flex-grow: 1;
   }
+  .event-name {  
+    flex-grow: 1;
+  }
 }
 
 
